--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,11 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn clean package
+
+    - name: SonarQube Scan
+      run: mvn sonar:sonar -Dsonar.projectKey=sqp_04cf904ebca092663cf2c3d2b31393edc018d860 -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN
+
